--- a/css/egencss.css
+++ b/css/egencss.css
@@ -3,7 +3,8 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background:#fff;
+  background:#171a21;
+  color:white;
 }
 
 
@@ -11,7 +12,23 @@ body {
 /* ---------------- */
 /* LOGIN PAGE FORM */
 
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: white;
+}
 
 .form-signin {
   max-width: 330px;
@@ -53,9 +70,47 @@ body {
 
 .btn-block{
  border-radius:0;   
- background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#87e0fd), color-stop(40%,#53cbf1), color-stop(100%,#05abe0)); /* Chrome,Safari4+ */
+ border:none;
+ background:#E80C3B;
 }
 
 .alert, .alert-success{
  margin-top:50px;   
 }
+
+/* FIXED NAVBAR */
+/* ------------ */
+/* FIXED NAVBAR*/
+
+
+
+.navbar {
+ background:#fff;
+ height:70px;
+}
+
+.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus{
+ 
+ background: #fff;
+color:#E80C3B;
+}
+
+.navbar-nav>li>a{
+ font-size:18px; 
+ 
+}
+
+.navbar-default .navbar-nav>.active>a {
+ font-size:18px;   
+}
+
+.navbar-nav>li>a {
+padding-top: 25px;
+padding-bottom: 10px;
+line-height: 20px;
+}
+
+/* CONTAINER  */
+/* ----------- */
+/* CONTAINER  */
+
