New color scheme, Navbar update

--- a/css/egencss.css
+++ b/css/egencss.css
@@ -3,7 +3,7 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background:#171a21;
+  background:url('../noisy_net.png');
   color:white;
 }
 
@@ -67,7 +67,15 @@ h6,
   margin-bottom: 10px;
   border-radius:0;
 }
+.form-signin .form-control {
+    margin-top:5px;
+}
 
+.btn-block:hover{
+ border-radius:0;   
+ border:none;
+ background:#E80C3B;
+}
 .btn-block{
  border-radius:0;   
  border:none;
@@ -85,19 +93,15 @@ h6,
 
 
 .navbar {
- background:#fff;
+
+ background:#171a21;
  height:70px;
 }
 
 .navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus{
  
- background: #fff;
+background: #fff;
 color:#E80C3B;
-}
-
-.navbar-nav>li>a{
- font-size:18px; 
- 
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -105,12 +109,72 @@ color:#E80C3B;
 }
 
 .navbar-nav>li>a {
-padding-top: 25px;
+padding-top: 15px;
 padding-bottom: 10px;
-line-height: 20px;
+line-height: 40px;
+}
+
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+background:#171a21;
+}
+.navbar-default .navbar-nav>li>a {
+ font-size:18px; 
+ color:#fff;   
+}
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+ color:#fff;
+   
 }
 
 /* CONTAINER  */
 /* ----------- */
 /* CONTAINER  */
+
+.moviearea {
+width:40%;
+height:400px;
+background-image: linear-gradient(bottom, #171a21 88%, black 12%);
+background-image: -o-linear-gradient(bottom, #171a21 88%, black 12%);
+background-image: -moz-linear-gradient(bottom, #171a21 88%, black 12%);
+background-image: -webkit-linear-gradient(bottom, #171a21 88%, black 12%);
+background-image: -ms-linear-gradient(bottom, #171a21 88%, black 12%);
+margin: 100px auto;
+border: 1px solid white;
+
+}
+
+.moviearea h1{
+ margin-left:10px;
+ font-size:27px;
+ line-height:10px;
+ font-style: oblique;
+ float:left;
+}
+.moviearea h2 {
+ float:right;
+ margin-right:10px;
+ font-size:27px;
+ line-height:10px;
+ font-style: oblique;
+ color:#E80C3B;
+}
+
+.moviebottomarea {
+width:40%;
+height:200px;
+margin: -80px auto;
+border: 1px solid white;
+background:url('../bg.png');
+    
+}
+
+.moviebottomarea img {
+ margin-left: 10px;
+ 
+}
+.moviebottomarea h1{
+ font-size:20px;
+ margin-left:10px;
+}
 
